[FEATURE] add app admin page

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -10,7 +10,6 @@
   "activity.label.ticketEndedAt": "Ticket End Time",
   "activity.label.ticketStartedAt": "Ticket Start Time",
   "activity.label.ticketType": "票種",
-  "activity.status.aboutToStart": "About to Start",
   "activity.status.draft": "Draft",
   "activity.status.expired": "Expired",
   "activity.status.finished": "Finished",
@@ -19,7 +18,6 @@
   "activity.status.notPublishedTicket": "Suspended.",
   "activity.status.public": "Show",
   "activity.status.publishedTicket": "Published.",
-  "activity.status.starting": "Starting",
   "activity.term.description": "Description",
   "activity.term.includingSessions": "Including Sessions",
   "activity.term.location": "location",
@@ -28,6 +26,7 @@
   "activity.term.threshold": "Threshold",
   "activity.term.ticketPlan": "Ticket Plan",
   "activity.term.ticketPlanTitle": "Ticket Plan Title",
+  "activity.text.imageTips": "建議圖片尺寸：1200*675px",
   "activity.text.noDescription": "No activity description.",
   "activity.text.noTicketPlan": "No ticket Plan.",
   "activity.text.notCompleteNotation": "Please fill in the required information below. Fill it out and publish it.",
@@ -40,17 +39,41 @@
   "activity.ui.participantsList": "Participants",
   "activity.ui.threshold": "At least",
   "activity.warning.selectSession": "Select Session",
+  "app.label.description": "網站敘述",
+  "app.label.fbPixelId": "Facebook Pixel ID",
+  "app.label.gaId": "Google Analytics ID",
+  "app.label.gtmId": "Google Tag Manager ID",
+  "app.label.name": "網站名稱",
+  "app.label.ogDescription": "Open Graph 網站敘述",
+  "app.label.ogImage": "Open Graph 網站圖片",
+  "app.label.ogTitle": "Open Graph 網站標題",
+  "app.label.ogUrl": "Open Graph 網址",
+  "app.label.paymentDueDays": "付款節止天數",
+  "app.label.seoName": "SEO 網站名稱",
+  "app.label.seoUrl": "SEO 網址",
+  "app.label.tappayAppId": "Tappay ID",
+  "app.label.tappayAppKey": "Tappay 金鑰",
+  "app.label.themeBtnDangerBackground": "主題色：警示按鈕背景",
+  "app.label.themeBtnDangerBorder": "主題色：警示按鈕邊框",
+  "app.label.themeBtnPrimaryBackground": "主題色：按鈕背景",
+  "app.label.themeBtnPrimaryColor": "主題色：按鈕主色",
+  "app.label.themeLayoutBodyBackground": "主題色：背景色",
+  "app.label.themeLayoutHeaderBackground": "主題色：Header背景色",
+  "app.label.themePrimaryColor": "主題色：主色",
+  "app.label.title": "網站標題",
+  "app.label.vimeoProjectId": "Vimeo ID",
   "appointment.label.allInstructors": "All Instructors",
   "appointment.label.appointmentCanceledAt": "已於 {time} 取消預約",
   "appointment.label.appointmentDate": "諮詢日期",
   "appointment.label.appointmentIssue": "學員提問",
   "appointment.label.appointmentResult": "諮詢重點紀錄",
-  "appointment.label.orderUpdatedTime": "訂單更新日期",
+  "appointment.label.canceledReason": "取消原因",
   "appointment.label.createPeriod": "Create Period",
   "appointment.label.duration": "Duration (minutes)",
   "appointment.label.enrollments": "Enrollments",
   "appointment.label.instructor": "Instructor",
   "appointment.label.minutes": "Minutes",
+  "appointment.label.orderUpdatedTime": "訂單更新日期",
   "appointment.label.people": "{count} {count, plural, one {person} other {people}}",
   "appointment.label.perDay": "per day",
   "appointment.label.perMonth": "per month",
@@ -173,6 +196,7 @@
   "common.label.invoiceName": "Invoice Name",
   "common.label.invoicePhone": "Invoice Phone",
   "common.label.invoicePostCode": "Invoice Post Code",
+  "common.label.invoiceStatus": "發票狀態",
   "common.label.invoiceTarget": "Invoice Target",
   "common.label.invoiceUniformNumber": "Invoice Uniform Number",
   "common.label.invoiceUniformTitle": "Invoice Uniform Title",
@@ -182,6 +206,7 @@
   "common.label.memberLog": "Log",
   "common.label.memberPage": "My Page",
   "common.label.month": "month",
+  "common.label.monthWithQuantifier": "個月",
   "common.label.name": "Name",
   "common.label.nameAndEmail": "Name / Email",
   "common.label.newPassword": "New Password",
@@ -208,14 +233,15 @@
   "common.label.orderProductPriceTotal": "Product Total",
   "common.label.orderProductType": "Product Type",
   "common.label.outdated": "Outdated",
-  "common.label.paymentNo": "交易編號",
   "common.label.paymentCreatedAt": "交易時間",
+  "common.label.paymentNo": "交易編號",
   "common.label.paymentPrice": "交易金額",
   "common.label.perDay": "per day",
   "common.label.perMonth": "per month",
   "common.label.perWeek": "per week",
   "common.label.perYear": "per year",
   "common.label.phone": "Phone",
+  "common.label.podcastSubscription": "訂閱廣播頻道",
   "common.label.points": "{points} points",
   "common.label.price": "Price",
   "common.label.profileAdminTitle": "Profile",
@@ -244,6 +270,7 @@
   "common.menu.activities": "Activities",
   "common.menu.activityAdmin": "Activity",
   "common.menu.activityCategory": "Categories",
+  "common.menu.appAdmin": "網站管理",
   "common.menu.appointmentAdmin": "Appointment",
   "common.menu.appointmentPlans": "Appointment Plans",
   "common.menu.appointments": "Appointments",
@@ -257,7 +284,6 @@
   "common.menu.merchandise": "商品",
   "common.menu.merchandiseCategory": "Categories",
   "common.menu.merchandiseIssues": "問答管理",
-  "common.menu.merchandiseShipping": "出貨管理",
   "common.menu.merchandiseShop": "商城管理",
   "common.menu.merchandises": "商品管理",
   "common.menu.ownerSettings": "Owner Settings",
@@ -273,11 +299,13 @@
   "common.menu.programs": "Programs",
   "common.menu.promotionAdmin": "Promotion",
   "common.menu.salesAdmin": "Sales",
+  "common.menu.shipping": "出貨管理",
   "common.menu.tempoDelivery": "節奏交付",
   "common.menu.voucherPlans": "Voucher Plans",
   "common.product.activityTicket": "Activity",
   "common.product.allActivityTicket": "全部線下實體",
   "common.product.allAppointmentPlan": "全部預約",
+  "common.product.allItem": "全部項目",
   "common.product.allMerchandise": "全部商品",
   "common.product.allPodcastPlan": "全部廣播訂閱頻道",
   "common.product.allPodcastProgram": "全部廣播",
@@ -285,9 +313,12 @@
   "common.product.allProgramPackagePlan": "全部課程組合",
   "common.product.allProgramPlan": "全部訂閱課程",
   "common.product.allProjectPlan": "全部專案",
+  "common.product.allScope": "全站折抵",
   "common.product.appointmentPlan": "Appointment",
   "common.product.card": "Card",
   "common.product.merchandise": "Merchandise",
+  "common.product.otherItem": "其他指定項目",
+  "common.product.otherSpecificProduct": "其他特定項目",
   "common.product.podcastPlan": "Podcast Channel",
   "common.product.podcastProgram": "Podcast",
   "common.product.program": "Program",
@@ -295,6 +326,7 @@
   "common.product.programPackagePlan": "Program Package",
   "common.product.programPlan": "Program",
   "common.product.projectPlan": "Project",
+  "common.product.specificItem": "指定項目",
   "common.product.unknownType": "Unknown",
   "common.status.expired": "Expired",
   "common.status.notComplete": "Not Complete",
@@ -353,6 +385,7 @@
   "common.term.tag": "Tag",
   "common.term.tags": "標籤",
   "common.term.teachingAssistant": "Teaching Assistant",
+  "common.term.timeRange": "日期範圍",
   "common.term.title": "Title",
   "common.term.unknownPeriod": "Unknown Period",
   "common.term.unknownProduct": "Unknown Product",
@@ -436,9 +469,6 @@
   "common.ui.search": "Search",
   "common.ui.sendEmailAgain": "Send Again",
   "common.ui.trial": "Trial",
-  "creator.label.creatorAppointments": "Appointment",
-  "creator.label.creatorPodcast": "Podcast Program",
-  "creator.label.creatorPrograms": "Program",
   "error.data.fetch": "Loading Failed",
   "error.event.checkSameCodeName": "Code name is already used",
   "error.event.checkSamePassword": "Confirmed password is not match to new password",
@@ -465,9 +495,6 @@
   "error.text.forbidden": "Permission denied.",
   "layout.label.creatorStudio": "Creator Studio",
   "layout.label.ownerBackstage": "Owner Backstage",
-  "membershipCard.label.endedAt": "end at {date}",
-  "membershipCard.label.noLimit": "Forever",
-  "membershipCard.label.selectMembershipCard": "Select Membership Card",
   "merchandise.label.abstract": "規格說明",
   "merchandise.label.basicSettings": "基本設定",
   "merchandise.label.comment": "備註",
@@ -480,13 +507,20 @@
   "merchandise.label.images": "商品圖片",
   "merchandise.label.introduction": "商品介紹",
   "merchandise.label.inventoryAdmin": "庫存管理",
+  "merchandise.label.memberShop": "販售商店",
+  "merchandise.label.memberShopTitle": "商店名稱",
   "merchandise.label.meta": "規格說明",
   "merchandise.label.okMart": "OK超商取貨",
+  "merchandise.label.other": "其他",
   "merchandise.label.paymentLink": "付款連結",
   "merchandise.label.price": "商品售價",
   "merchandise.label.publishAdmin": "上架設定",
   "merchandise.label.quantity": "數量",
   "merchandise.label.salesAdmin": "銷售設定",
+  "merchandise.label.selectContentCreator": "選擇創作者",
+  "merchandise.label.sendByPost": "郵寄",
+  "merchandise.label.setSalePrice": "設定優惠價",
+  "merchandise.label.setSellingTime": "限定販售時間",
   "merchandise.label.settings": "商品資訊",
   "merchandise.label.settingsAdmin": "賣場資訊",
   "merchandise.label.sevenEleven": "7-11超商取貨",
@@ -507,12 +541,14 @@
   "merchandise.status.shipping": "待出貨",
   "merchandise.status.unpublished": "未上架",
   "merchandise.status.unpublishedNotation": "你的商品未發佈，此商品並不會顯示在頁面上。",
+  "merchandise.text.abstractLimit": "限 200 字",
   "merchandise.text.deleteDescription": "請仔細確認是否真的要刪除，因為一旦刪除就無法恢復。",
   "merchandise.text.deleteWarning": "一經刪除即不可恢復，確定要刪除嗎？",
   "merchandise.text.estimatedShippingDays": "預估寄送天數",
   "merchandise.text.imageTips": "建議圖片尺寸：600*600px 以上",
   "merchandise.text.noLink": "尚未設定付款連結",
   "merchandise.text.noMatchingItems": "沒有任何符合項目",
+  "merchandise.text.noMemberShop": "尚未選擇販售商店",
   "merchandise.text.noMeta": "尚未填寫規格",
   "merchandise.text.noPrice": "尚未設定售價",
   "merchandise.text.noShippingDays": "尚未填寫寄送天數",
@@ -525,8 +561,12 @@
   "merchandise.text.purchase": "購買",
   "merchandise.text.searchMerchandise": "搜尋商品名稱",
   "merchandise.text.searchMerchandiseOrder": "搜尋訂單編號、商品名稱",
+  "merchandise.text.selectMemberShopPlaceholder": "請選擇販售於哪個商城",
   "merchandise.text.unpublishedNotation": "你的商城未啟用，你的所有商品並不會顯示在頁面上。",
+  "merchandise.ui.activateShop": "啟用商店",
   "merchandise.ui.cancelNotice": "取消通知",
+  "merchandise.ui.closeShop": "關閉商店",
+  "merchandise.ui.createMemberShop": "建立商店",
   "merchandise.ui.createMerchandise": "建立商品",
   "merchandise.ui.deleteImage": "刪除圖片",
   "merchandise.ui.deleteMerchandise": "刪除商品",
@@ -543,11 +583,12 @@
   "merchandise.ui.shippingName": "收件姓名",
   "merchandise.ui.shippingNotice": "通知出貨",
   "merchandise.ui.shippingPhone": "收件人電話",
-  "merchandiseMessages.label.setSalePrice": "設定優惠價",
-  "merchandiseMessages.label.setSellingTime": "限定販售時間",
   "notification.term.notification": "Notification",
   "notification.ui.checkNotifications": "read more",
   "notification.ui.markAllAsRead": "Mark all as read",
+  "payment.status.invoiceFailed": "開立失敗 {errorCode}",
+  "payment.status.invoicePending": "未開立電子發票",
+  "payment.status.invoiceSuccess": "開立成功",
   "podcast.label.description": "Description",
   "podcast.label.duration": "Duration (minutes)",
   "podcast.label.plan": "Plan",
@@ -557,6 +598,7 @@
   "podcast.label.podcastSettings": "Settings",
   "podcast.label.salesCount": "Sales Count",
   "podcast.label.status": "Status",
+  "podcast.label.totalDuration": "總時長",
   "podcast.status.notPublished": "Not Published",
   "podcast.status.planNotPublished": "停售，方案暫停對外銷售，並從廣播頁中隱藏",
   "podcast.status.planPublished": "發佈，立刻開賣訂閱方案",
@@ -576,9 +618,18 @@
   "podcast.text.podcastCoverTips": "Recommended size: 1080*1080px",
   "podcast.text.publishedNotation": "現在你的廣播已經發佈，此廣播並會出現在頁面上，學生將能購買此廣播。",
   "podcast.text.unpublishedNotation": "因你的廣播未發佈，此廣播並不會顯示在頁面上，學生也不能購買此廣播。",
+  "podcast.ui.backward": "往後5秒",
+  "podcast.ui.bulkUpload": "合併上傳",
   "podcast.ui.createPodcastPlan": "Create",
   "podcast.ui.createPodcastProgram": "Create",
+  "podcast.ui.deleteAudio": "刪除音檔",
+  "podcast.ui.forward": "往前5秒",
+  "podcast.ui.pause": "暫停",
+  "podcast.ui.play": "播放",
+  "podcast.ui.recordAudio": "錄製音檔",
   "podcast.ui.subscribe": "Subscribe",
+  "podcast.ui.trim": "裁切",
+  "podcast.ui.upload": "合併上傳",
   "podcast.ui.uploadAudioFile": "Upload Audio File",
   "price.label.firstPeriod": "First Period",
   "price.label.free": "Free",
@@ -590,7 +641,6 @@
   "program.label.allProgram": "All Program",
   "program.label.availableForPastContent": "可看過去內容",
   "program.label.contentContext": "Content",
-  "program.label.contentMenu": "Content Menu",
   "program.label.contentPlan": "Content Plan",
   "program.label.contentSorting": "Content Sorting",
   "program.label.contentTitle": "Title",
@@ -639,23 +689,24 @@
   "program.text.deleteSectionWarning": "此區塊內的所有內容將被刪除，此動作無法還原",
   "program.text.discountDownNotation": "定價或優惠價 - 首期折扣 = 首期支付金額\nEX：100 - 20 = 80，此欄填入 20",
   "program.text.empty": "No program issue",
-  "program.text.emptyContentMenu": "初次購買還沒有新的內容喔～",
   "program.text.enrolledPerpetualCount": "Purchased: {count}",
   "program.text.enrolledSubscriptionCount": "Subscribed: {count}",
   "program.text.isPrivatelyPublishedNotation": "Your course has been published privately. This course will not appear on the page. Students can only access it through the link.",
   "program.text.isPubliclyPublishedNotation": "Now that your class is publicly available, this class will appear on the page.",
   "program.text.isPublishedNotation": "現在你的課程已經發佈，此課程並會出現在頁面上，學生將能購買此課程。",
   "program.text.isUnpublishedNotation": "Because your course is not published, it will not appear on the page, and students cannot purchase this course.",
-  "program.text.memberWatchOnly": "{name} only",
   "program.text.noPrice": "Missing price",
   "program.text.noProgramAbstract": "Missing abstract",
   "program.text.noProgramContent": "Missing content",
   "program.text.noProgramDescription": "Missing description",
   "program.text.notCompleteNotation": "Please fill in the required information below. Fill it out and publish it.",
   "program.text.programContentPlans": "Plan: ",
+  "program.text.programImgTips": "建議圖片尺寸：1200*675px",
   "program.text.salePriceNotation": "購買到優惠價的會員，往後每期皆以優惠價收款",
+  "program.text.subscriptionCount": "{count} 人",
   "program.text.unpublishingTitle": "Unpublish program?",
   "program.text.unpublishingWarning": "課程將下架且不會出現在課程列表，已購買的學生仍然可以看到課程內容。",
+  "program.text.uploadVideo": "上傳影片",
   "program.text.videoPlaceholder": "video url",
   "program.ui.checkProgramContent": "Check program content",
   "program.ui.createBlock": "Create Block",
@@ -666,12 +717,8 @@
   "program.ui.deliver": "啟用",
   "program.ui.delivery": "交付課程",
   "program.ui.editProgram": "編輯課程",
-  "program.ui.joinNow": "Join now",
   "program.ui.jumpTo": "Go to Tab",
   "program.ui.show": "Show",
-  "program.ui.soldOut": "Sold out",
-  "program.ui.sortByDate": "Sort By Date",
-  "program.ui.sortBySection": "Sort By Section",
   "program.ui.sortProgram": "Sort Program",
   "program.ui.uploadCaption": "Upload Caption",
   "program.ui.uploadVideo": "Upload Video",
@@ -695,15 +742,20 @@
   "programPackage.ui.createPlan": "建立方案",
   "programPackage.ui.createProgramPackage": "建立課程組合",
   "programPackage.ui.editPlan": "編輯方案",
+  "programPackage.ui.invisible": "隱藏",
+  "programPackage.ui.isParticipantsVisible": "購買人數",
   "programPackage.ui.publish": "發售，課程組合上架後立即開賣",
   "programPackage.ui.subscription": "訂閱",
   "programPackage.ui.unpublish": "停售，此方案暫停對外銷售，並從課程組合中隱藏",
+  "programPackage.ui.visible": "顯示",
   "promotion.label.allProductScope": "全站折抵",
   "promotion.label.availableDateRange": "Available Date",
   "promotion.label.constraint": "Constraint",
   "promotion.label.constraintAmount": "消費滿 {amount} 折抵",
   "promotion.label.create": "Create",
+  "promotion.label.description": "使用描述",
   "promotion.label.discountHelp": "折抵方式為比例時，額度範圍為 0 - 100",
+  "promotion.label.discountTarget": "折抵項目",
   "promotion.label.exchangeItems": "Exchangeable Items",
   "promotion.label.exchangeItemsAmount": "Amount of Exchangeable Items",
   "promotion.label.forever": "Forever",
@@ -711,11 +763,13 @@
   "promotion.label.otherSpecificProduct": "其他特定項目",
   "promotion.label.price": "{amount}",
   "promotion.label.ratio": "{amount}%",
+  "promotion.label.rules": "使用規則",
   "promotion.label.scope": "折抵模式",
   "promotion.label.specificProductScope": "指定項目折抵",
   "promotion.label.unit": "張",
   "promotion.label.withoutConstraintAmount": "直接折抵",
   "promotion.status.available": "Available",
+  "promotion.status.notYet": "未啟用",
   "promotion.status.unavailable": "Unavailable",
   "promotion.status.used": "已使用",
   "promotion.term.amount": "amount",
@@ -730,6 +784,8 @@
   "promotion.term.voucherCode": "Voucher Code",
   "promotion.term.voucherCodes": "Voucher",
   "promotion.term.voucherPlanTitle": "Title",
+  "promotion.text.constraints": "消費滿 {total} 折抵 {discount}",
+  "promotion.text.directly": "直接折抵 {discount}",
   "promotion.text.enterVoucherCode": "voucher code",
   "promotion.text.exchangeItemsNumber": "可兌換 {number} 個項目",
   "promotion.text.exchangeNotation": "兌換券為一次使用後失效，請一次兌換完畢",
@@ -750,9 +806,5 @@
   "upload.event.uploading": "Uploading",
   "upload.label.retry": "Retry",
   "upload.label.uploadFile": "Upload File",
-  "voucher.event.failedExchange": "Exchange Failed",
-  "voucher.event.failedInsert": "Insert Failed",
-  "voucher.event.successfullyExchange": "兌換成功，請到「我的主頁」查看",
-  "voucher.event.successfullyInsert": "Insert Successfully",
   "voucher.label.selectProducts": "Select Products"
 }
