--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -10,7 +10,6 @@
   "activity.label.ticketEndedAt": "Thời gian kết thúc bán vé",
   "activity.label.ticketStartedAt": "Thời gian bắt đầu bán vé",
   "activity.label.ticketType": "票種",
-  "activity.status.aboutToStart": "Sắp tổ chức",
   "activity.status.draft": "Chưa đăng tải",
   "activity.status.expired": "Đã đóng ",
   "activity.status.finished": "Đã kết thúc",
@@ -19,7 +18,6 @@
   "activity.status.notPublishedTicket": "Ngừng bán, loại vé này tạm dừng bán cho bên ngoài, đồng thời ẩn trong trang mua vé",
   "activity.status.public": "Công khai",
   "activity.status.publishedTicket": "Bán ra, bán ngay sau khi sự kiện được đăng tải",
-  "activity.status.starting": "Hoạt động bắt đầu",
   "activity.term.description": "Mô tả ghi chú",
   "activity.term.includingSessions": "Bao gồm các phiên",
   "activity.term.location": "Địa chỉ",
@@ -28,6 +26,7 @@
   "activity.term.threshold": "Số người ít nhất",
   "activity.term.ticketPlan": "Kế hoạch vé",
   "activity.term.ticketPlanTitle": "Tên vé",
+  "activity.text.imageTips": "建議圖片尺寸：1200*675px",
   "activity.text.noDescription": "Chưa nhập thông tin mô tả sự kiện",
   "activity.text.noTicketPlan": "Chưa đặt kế hoạch vé",
   "activity.text.notCompleteNotation": "Vui thông tin điền các thông tin cần thiết，sau khihoa2nn tất có thể đăng tải ngay",
@@ -40,17 +39,41 @@
   "activity.ui.participantsList": "Danh sách tham dự ",
   "activity.ui.threshold": "Ít nhất",
   "activity.warning.selectSession": "Chọn phiên",
+  "app.label.description": "網站敘述",
+  "app.label.fbPixelId": "Facebook Pixel ID",
+  "app.label.gaId": "Google Analytics ID",
+  "app.label.gtmId": "Google Tag Manager ID",
+  "app.label.name": "網站名稱",
+  "app.label.ogDescription": "Open Graph 網站敘述",
+  "app.label.ogImage": "Open Graph 網站圖片",
+  "app.label.ogTitle": "Open Graph 網站標題",
+  "app.label.ogUrl": "Open Graph 網址",
+  "app.label.paymentDueDays": "付款節止天數",
+  "app.label.seoName": "SEO 網站名稱",
+  "app.label.seoUrl": "SEO 網址",
+  "app.label.tappayAppId": "Tappay ID",
+  "app.label.tappayAppKey": "Tappay 金鑰",
+  "app.label.themeBtnDangerBackground": "主題色：警示按鈕背景",
+  "app.label.themeBtnDangerBorder": "主題色：警示按鈕邊框",
+  "app.label.themeBtnPrimaryBackground": "主題色：按鈕背景",
+  "app.label.themeBtnPrimaryColor": "主題色：按鈕主色",
+  "app.label.themeLayoutBodyBackground": "主題色：背景色",
+  "app.label.themeLayoutHeaderBackground": "主題色：Header背景色",
+  "app.label.themePrimaryColor": "主題色：主色",
+  "app.label.title": "網站標題",
+  "app.label.vimeoProjectId": "Vimeo ID",
   "appointment.label.allInstructors": "Toàn bộ giảng viên",
   "appointment.label.appointmentCanceledAt": "已於 {time} 取消預約",
   "appointment.label.appointmentDate": "諮詢日期",
   "appointment.label.appointmentIssue": "學員提問",
   "appointment.label.appointmentResult": "諮詢重點紀錄",
-  "appointment.label.orderUpdatedTime": "訂單更新日期",
+  "appointment.label.canceledReason": "取消原因",
   "appointment.label.createPeriod": "Lập thời gian",
   "appointment.label.duration": "Thời lượng (phút)",
   "appointment.label.enrollments": "Đã đặt hẹn",
   "appointment.label.instructor": "Giảng viên",
   "appointment.label.minutes": "Phút",
+  "appointment.label.orderUpdatedTime": "訂單更新日期",
   "appointment.label.people": "{count} Người",
   "appointment.label.perDay": "Mỗi ngày",
   "appointment.label.perMonth": "Mỗi tháng",
@@ -173,6 +196,7 @@
   "common.label.invoiceName": "Tên hóa đơn",
   "common.label.invoicePhone": "Điện thoại hóa đơn",
   "common.label.invoicePostCode": "發票郵遞區號",
+  "common.label.invoiceStatus": "發票狀態",
   "common.label.invoiceTarget": "發票對象",
   "common.label.invoiceUniformNumber": "發票統編",
   "common.label.invoiceUniformTitle": "發票抬頭",
@@ -182,6 +206,7 @@
   "common.label.memberLog": "Lịch sử hội viên",
   "common.label.memberPage": "Trang chủ của tôi",
   "common.label.month": "Tháng",
+  "common.label.monthWithQuantifier": "個月",
   "common.label.name": "姓名",
   "common.label.nameAndEmail": "姓名 / Email",
   "common.label.newPassword": "Mật khẩu",
@@ -208,14 +233,15 @@
   "common.label.orderProductPriceTotal": "Tổng tiền sản phẩm",
   "common.label.orderProductType": "Loại sản phẩm",
   "common.label.outdated": "Đã quá hạn",
-  "common.label.paymentNo": "交易編號",
   "common.label.paymentCreatedAt": "交易時間",
+  "common.label.paymentNo": "交易編號",
   "common.label.paymentPrice": "交易金額",
   "common.label.perDay": "Mỗi ngày",
   "common.label.perMonth": "Mỗi tháng",
   "common.label.perWeek": "Mỗi tuần",
   "common.label.perYear": "Mỗi năm",
   "common.label.phone": "手機",
+  "common.label.podcastSubscription": "訂閱廣播頻道",
   "common.label.points": "{points} Điểm",
   "common.label.price": "價格",
   "common.label.profileAdminTitle": "Thông tin tài khoản",
@@ -244,6 +270,7 @@
   "common.menu.activities": "Quản lý sự kiện offline",
   "common.menu.activityAdmin": "Sự kiện offline",
   "common.menu.activityCategory": "線下實體分類",
+  "common.menu.appAdmin": "網站管理",
   "common.menu.appointmentAdmin": "Đặt hẹn dịch vụ",
   "common.menu.appointmentPlans": "kế hoạch đặt ",
   "common.menu.appointments": "Lịch sử đặt hẹn",
@@ -257,7 +284,6 @@
   "common.menu.merchandise": "商品",
   "common.menu.merchandiseCategory": "商品分類",
   "common.menu.merchandiseIssues": "問答管理",
-  "common.menu.merchandiseShipping": "出貨管理",
   "common.menu.merchandiseShop": "商城管理",
   "common.menu.merchandises": "商品管理",
   "common.menu.ownerSettings": "Cài đặt quản trị viên",
@@ -273,11 +299,13 @@
   "common.menu.programs": "Quản lý khóa học",
   "common.menu.promotionAdmin": "Quản lý chương trình khuyến mãi",
   "common.menu.salesAdmin": "Quản lý bán hàng",
+  "common.menu.shipping": "出貨管理",
   "common.menu.tempoDelivery": "節奏交付",
   "common.menu.voucherPlans": "Kế hoạch voucher",
   "common.product.activityTicket": "Vé sự kiện",
   "common.product.allActivityTicket": "全部線下實體",
   "common.product.allAppointmentPlan": "全部預約",
+  "common.product.allItem": "全部項目",
   "common.product.allMerchandise": "全部商品",
   "common.product.allPodcastPlan": "全部廣播訂閱頻道",
   "common.product.allPodcastProgram": "全部廣播",
@@ -285,9 +313,12 @@
   "common.product.allProgramPackagePlan": "全部課程組合",
   "common.product.allProgramPlan": "全部訂閱課程",
   "common.product.allProjectPlan": "全部專案",
+  "common.product.allScope": "全站折抵",
   "common.product.appointmentPlan": "Đặt hẹn",
   "common.product.card": "Thẻ hội viên",
   "common.product.merchandise": "Sản phẩm",
+  "common.product.otherItem": "其他指定項目",
+  "common.product.otherSpecificProduct": "其他特定項目",
   "common.product.podcastPlan": "Podcast",
   "common.product.podcastProgram": "Podcast",
   "common.product.program": "Khóa học",
@@ -295,6 +326,7 @@
   "common.product.programPackagePlan": "Tổ hợp khóa học",
   "common.product.programPlan": "Kế hoạch khóa học",
   "common.product.projectPlan": "Kế hoạch dự án",
+  "common.product.specificItem": "指定項目",
   "common.product.unknownType": "Chưa biết",
   "common.status.expired": "到期",
   "common.status.notComplete": "Còn danh mục chưa hoàn thành",
@@ -353,6 +385,7 @@
   "common.term.tag": "標籤",
   "common.term.tags": "標籤",
   "common.term.teachingAssistant": "Trợ giảng",
+  "common.term.timeRange": "日期範圍",
   "common.term.title": "Tên",
   "common.term.unknownPeriod": "未知週期",
   "common.term.unknownProduct": "Phân loại chưa biết",
@@ -436,9 +469,6 @@
   "common.ui.search": "Tìm kiếm",
   "common.ui.sendEmailAgain": "Gửi lại lần nữa",
   "common.ui.trial": "Xem thử",
-  "creator.label.creatorAppointments": "Đặt lịch hẹn",
-  "creator.label.creatorPodcast": "Podcast",
-  "creator.label.creatorPrograms": "Mở khóa học",
   "error.data.fetch": "Bị lỗi",
   "error.event.checkSameCodeName": "網址代碼已被使用",
   "error.event.checkSamePassword": "Vui lòng xác nhận mật khẩu giống với mật khẩu mới",
@@ -465,9 +495,6 @@
   "error.text.forbidden": "Bạn không có quyền truy cập vào trang này",
   "layout.label.creatorStudio": "Studio của người sáng tạo",
   "layout.label.ownerBackstage": "Nơi chuyên quản lý kênh",
-  "membershipCard.label.endedAt": "{date}kết thúc ",
-  "membershipCard.label.noLimit": "Không có thời hạn sử dụng",
-  "membershipCard.label.selectMembershipCard": "Chọn thẻ hội viên",
   "merchandise.label.abstract": "規格說明",
   "merchandise.label.basicSettings": "基本設定",
   "merchandise.label.comment": "備註",
@@ -480,13 +507,20 @@
   "merchandise.label.images": "商品圖片",
   "merchandise.label.introduction": "商品介紹",
   "merchandise.label.inventoryAdmin": "庫存管理",
+  "merchandise.label.memberShop": "販售商店",
+  "merchandise.label.memberShopTitle": "商店名稱",
   "merchandise.label.meta": "規格說明",
   "merchandise.label.okMart": "OK超商取貨",
+  "merchandise.label.other": "其他",
   "merchandise.label.paymentLink": "付款連結",
   "merchandise.label.price": "商品售價",
   "merchandise.label.publishAdmin": "上架設定",
   "merchandise.label.quantity": "數量",
   "merchandise.label.salesAdmin": "銷售設定",
+  "merchandise.label.selectContentCreator": "選擇創作者",
+  "merchandise.label.sendByPost": "郵寄",
+  "merchandise.label.setSalePrice": "設定優惠價",
+  "merchandise.label.setSellingTime": "限定販售時間",
   "merchandise.label.settings": "商品資訊",
   "merchandise.label.settingsAdmin": "賣場資訊",
   "merchandise.label.sevenEleven": "7-11超商取貨",
@@ -507,12 +541,14 @@
   "merchandise.status.shipping": "待出貨",
   "merchandise.status.unpublished": "未上架",
   "merchandise.status.unpublishedNotation": "你的商品未發佈，此商品並不會顯示在頁面上。",
+  "merchandise.text.abstractLimit": "限 200 字",
   "merchandise.text.deleteDescription": "請仔細確認是否真的要刪除，因為一旦刪除就無法恢復。",
   "merchandise.text.deleteWarning": "一經刪除即不可恢復，確定要刪除嗎？",
   "merchandise.text.estimatedShippingDays": "預估寄送天數",
   "merchandise.text.imageTips": "建議圖片尺寸：600*600px 以上",
   "merchandise.text.noLink": "尚未設定付款連結",
   "merchandise.text.noMatchingItems": "沒有任何符合項目",
+  "merchandise.text.noMemberShop": "尚未選擇販售商店",
   "merchandise.text.noMeta": "尚未填寫規格",
   "merchandise.text.noPrice": "尚未設定售價",
   "merchandise.text.noShippingDays": "尚未填寫寄送天數",
@@ -525,8 +561,12 @@
   "merchandise.text.purchase": "購買",
   "merchandise.text.searchMerchandise": "搜尋商品名稱",
   "merchandise.text.searchMerchandiseOrder": "搜尋訂單編號、商品名稱",
+  "merchandise.text.selectMemberShopPlaceholder": "請選擇販售於哪個商城",
   "merchandise.text.unpublishedNotation": "你的商城未啟用，你的所有商品並不會顯示在頁面上。",
+  "merchandise.ui.activateShop": "啟用商店",
   "merchandise.ui.cancelNotice": "取消通知",
+  "merchandise.ui.closeShop": "關閉商店",
+  "merchandise.ui.createMemberShop": "建立商店",
   "merchandise.ui.createMerchandise": "建立商品",
   "merchandise.ui.deleteImage": "刪除圖片",
   "merchandise.ui.deleteMerchandise": "刪除商品",
@@ -543,11 +583,12 @@
   "merchandise.ui.shippingName": "收件姓名",
   "merchandise.ui.shippingNotice": "通知出貨",
   "merchandise.ui.shippingPhone": "收件人電話",
-  "merchandiseMessages.label.setSalePrice": "設定優惠價",
-  "merchandiseMessages.label.setSellingTime": "限定販售時間",
   "notification.term.notification": "Thông báo",
   "notification.ui.checkNotifications": "Xem thông báo",
   "notification.ui.markAllAsRead": "Tất cả đánh dấu là đã đọc",
+  "payment.status.invoiceFailed": "開立失敗 {errorCode}",
+  "payment.status.invoicePending": "未開立電子發票",
+  "payment.status.invoiceSuccess": "開立成功",
   "podcast.label.description": "Mô tả nội dụng",
   "podcast.label.duration": "Thời lượng nội dung (phút)",
   "podcast.label.plan": "Kế hoạch",
@@ -557,6 +598,7 @@
   "podcast.label.podcastSettings": "Thiết lập podcast",
   "podcast.label.salesCount": "Mua",
   "podcast.label.status": "Trạng thái",
+  "podcast.label.totalDuration": "總時長",
   "podcast.status.notPublished": "Chưa đăng tải",
   "podcast.status.planNotPublished": "Ngừng bán, tạm dừng bán kế hoạch cho bên ngoài, đồng thời ẩn trong trang podcast",
   "podcast.status.planPublished": "Đăng tải, bán ngay kế hoạch đăng ký",
@@ -576,9 +618,18 @@
   "podcast.text.podcastCoverTips": "Kích thước đề xuất：1080*1080px",
   "podcast.text.publishedNotation": "Hiện tại Podcast của bạn đã được đăng tải, Podcast này sẽ xuất hiện trên trang, học viên có thể mua podcast này.",
   "podcast.text.unpublishedNotation": "Vì podcast của bạn chưa đăng tải, Podcast này không xuất hiện trên trang và học viên không thể mua podcast này.",
+  "podcast.ui.backward": "往後5秒",
+  "podcast.ui.bulkUpload": "合併上傳",
   "podcast.ui.createPodcastPlan": "LậpKế hoạch",
   "podcast.ui.createPodcastProgram": "Lập Podcast",
+  "podcast.ui.deleteAudio": "刪除音檔",
+  "podcast.ui.forward": "往前5秒",
+  "podcast.ui.pause": "暫停",
+  "podcast.ui.play": "播放",
+  "podcast.ui.recordAudio": "錄製音檔",
   "podcast.ui.subscribe": "Đăng ký kênh",
+  "podcast.ui.trim": "裁切",
+  "podcast.ui.upload": "合併上傳",
   "podcast.ui.uploadAudioFile": "Đăng tải Audio",
   "price.label.firstPeriod": "Đợt đầu",
   "price.label.free": "Miễn phí",
@@ -590,7 +641,6 @@
   "program.label.allProgram": "Toàn bộ khóa học",
   "program.label.availableForPastContent": "Có thể xem các khóa học cũ",
   "program.label.contentContext": "Nội dung",
-  "program.label.contentMenu": "Danh sách khóa học",
   "program.label.contentPlan": "Áp dụng kế hoạch",
   "program.label.contentSorting": "Sắp xếp nội dung",
   "program.label.contentTitle": "Tiêu đề",
@@ -639,23 +689,24 @@
   "program.text.deleteSectionWarning": "Nội dung tại khối này sẽ bị xóa, hành động này không thể hoàn tác",
   "program.text.discountDownNotation": "Giá cố định hoặc ưu đãi giảm giá trả góp lần đầu = số tiền thanh toán trả góp đầu tiên \nEX: 100-20 = 80, nhập 20 vào cột này",
   "program.text.empty": "Không có vấn đề về khóa học",
-  "program.text.emptyContentMenu": "Vẫn chưa có nội dung mới cho lần mua đầu tiên nhé",
   "program.text.enrolledPerpetualCount": "Đã bán cho {count} người",
   "program.text.enrolledSubscriptionCount": "Đã đăng ký {count} người",
   "program.text.isPrivatelyPublishedNotation": "你的課程已經私密發佈，此課程不會出現在頁面上，學生僅能透過連結進入瀏覽。",
   "program.text.isPubliclyPublishedNotation": "現在你的課程已公開發佈，此課程會出現在頁面上。",
   "program.text.isPublishedNotation": "Hiện tại khóa học của bạn đã được đăng tải, nó sẽ xuất hiện trên trang và học viên sẽ có thể mua khóa học này.",
   "program.text.isUnpublishedNotation": "Vì khóa học của bạn chưa được đăng tải, khóa học này sẽ không xuất hiện trên trang và học viên không thể mua khóa học này",
-  "program.text.memberWatchOnly": "Chỉ cung cấp cho {name} xem",
   "program.text.noPrice": "Chưa định giá",
   "program.text.noProgramAbstract": "Chưa thêm tóm tắt nội dung khóa học",
   "program.text.noProgramContent": "Chưa thêm nội dung khóa học",
   "program.text.noProgramDescription": "Chưa thêm mô tả khóa học",
   "program.text.notCompleteNotation": "Xin vui lòng điền thông tin cần thiết bên dưới, sau khi hoàn tất có thể đăng bài",
   "program.text.programContentPlans": "Kế hoạch:",
+  "program.text.programImgTips": "建議圖片尺寸：1200*675px",
   "program.text.salePriceNotation": "Thành viên đã mua giá chiết khấu sẽ nhận được giá chiết khấu trong mỗi giai đoạn tiếp theo",
+  "program.text.subscriptionCount": "{count} 人",
   "program.text.unpublishingTitle": "Xác định hủy đăng bài?",
   "program.text.unpublishingWarning": "Khóa học sẽ bị xóa và sẽ không xuất hiện trong danh sách khóa học. Nội dung khóa học sẽ vẫn hiển thị cho học viên đã mua nó",
+  "program.text.uploadVideo": "上傳影片",
   "program.text.videoPlaceholder": "Dán link video",
   "program.ui.checkProgramContent": "Xem nội dung khóa học",
   "program.ui.createBlock": "Tạo khối",
@@ -666,12 +717,8 @@
   "program.ui.deliver": "啟用",
   "program.ui.delivery": "交付課程",
   "program.ui.editProgram": "編輯課程",
-  "program.ui.joinNow": "Tham gia ngay",
   "program.ui.jumpTo": "Điền thông tin",
   "program.ui.show": "Hiện thị",
-  "program.ui.soldOut": "Đã bán hết",
-  "program.ui.sortByDate": "Sắp xếp thời gian",
-  "program.ui.sortBySection": "Sắp xếp bài học",
   "program.ui.sortProgram": "Sắp xếp khóa học",
   "program.ui.uploadCaption": "Đăng tải phụ đề",
   "program.ui.uploadVideo": "Đăng tải video",
@@ -695,15 +742,20 @@
   "programPackage.ui.createPlan": "建立方案",
   "programPackage.ui.createProgramPackage": "建立課程組合",
   "programPackage.ui.editPlan": "編輯方案",
+  "programPackage.ui.invisible": "隱藏",
+  "programPackage.ui.isParticipantsVisible": "購買人數",
   "programPackage.ui.publish": "發售，課程組合上架後立即開賣",
   "programPackage.ui.subscription": "訂閱",
   "programPackage.ui.unpublish": "停售，此方案暫停對外銷售，並從課程組合中隱藏",
+  "programPackage.ui.visible": "顯示",
   "promotion.label.allProductScope": "全站折抵",
   "promotion.label.availableDateRange": "Thời hạn",
   "promotion.label.constraint": "Nhu cầu tiêu dùng",
   "promotion.label.constraintAmount": "Tiêu dùng đến mức giảm giá  {amount} ",
   "promotion.label.create": "Thêm mới",
+  "promotion.label.description": "使用描述",
   "promotion.label.discountHelp": "Khi phương thức chiết khấu tỷ lệ thuận, phạm vi hạn ngạch là 0-100F",
+  "promotion.label.discountTarget": "折抵項目",
   "promotion.label.exchangeItems": "Danh mục quy đổi",
   "promotion.label.exchangeItemsAmount": "Số lượng danh mục quy đổi",
   "promotion.label.forever": "Không có thời hạn sử dụng",
@@ -711,11 +763,13 @@
   "promotion.label.otherSpecificProduct": "其他特定項目",
   "promotion.label.price": "Số tiền {amount} USD",
   "promotion.label.ratio": "Tỉ lệ {amount}%",
+  "promotion.label.rules": "使用規則",
   "promotion.label.scope": "折抵模式",
   "promotion.label.specificProductScope": "指定項目折抵",
   "promotion.label.unit": "Thẻ",
   "promotion.label.withoutConstraintAmount": "Giảm giá trực tiếp",
   "promotion.status.available": "Có thể sử dụng",
+  "promotion.status.notYet": "未啟用",
   "promotion.status.unavailable": "Đã hết hiệu lực",
   "promotion.status.used": "已使用",
   "promotion.term.amount": "Số lượng",
@@ -730,6 +784,8 @@
   "promotion.term.voucherCode": "Mã voucher",
   "promotion.term.voucherCodes": "Các mã voucher",
   "promotion.term.voucherPlanTitle": "Tên kế hoạch khuyến mãi",
+  "promotion.text.constraints": "消費滿 {total} 折抵 {discount}",
+  "promotion.text.directly": "直接折抵 {discount}",
   "promotion.text.enterVoucherCode": "Nhập mã voucher",
   "promotion.text.exchangeItemsNumber": "Được đổi danh mục {number}",
   "promotion.text.exchangeNotation": "Voucher mất hiệu lực sau 1 lần sử dụng, xin vui lòng chỉ sử dụng 1 lần",
@@ -750,9 +806,5 @@
   "upload.event.uploading": "Đang đăng tải",
   "upload.label.retry": "Đăng tải lại ",
   "upload.label.uploadFile": "Đăng tải tập tin",
-  "voucher.event.failedExchange": "Không thể sử dụng voucher",
-  "voucher.event.failedInsert": "Không thể thêm voucher",
-  "voucher.event.successfullyExchange": "Quy đổi thành công，xin vui lòng xem tại Trang chủ của tôi",
-  "voucher.event.successfullyInsert": "Thêm thành công Voucher",
   "voucher.label.selectProducts": "Chọn danh mục quy đổi"
 }
