[BUGFIX] CoinHistory add orderLogId , fix typo, fix coins display

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -571,7 +571,7 @@
   "merchandise.ui.deleteImage": "刪除圖片",
   "merchandise.ui.deleteMerchandise": "刪除商品",
   "merchandise.ui.modifyInventory": "調整庫存",
-  "merchandise.ui.noMerchandiseOrder": "沒有任何商品記錄",
+  "merchandise.ui.noMerchandiseOrder": "沒有任何商品紀錄",
   "merchandise.ui.seller": "賣家通知",
   "merchandise.ui.send": "送出",
   "merchandise.ui.setCover": "設為封面",
