[BUGFIX] memberSelector allowClear assignment module setting

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -347,6 +347,7 @@
   "common.term.activityTicket": "Activity Ticket",
   "common.term.anonymous": "Anonymous",
   "common.term.appOwner": "App Owner",
+  "common.term.assign": "assign",
   "common.term.author": "作者",
   "common.term.avatar": "Avatar",
   "common.term.card": "Membership Card",
