--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -347,6 +347,7 @@
   "common.term.activityTicket": "Vé sự kiện",
   "common.term.anonymous": "Người sử dụng nặc danh",
   "common.term.appOwner": "Quản trị viên",
+  "common.term.assign": "chỉ định",
   "common.term.author": "作者",
   "common.term.avatar": "Avatar",
   "common.term.card": "Thẻ thành viên",
